# 3D-GAME-DEVELOPMENT

./: .gitignore  CMakeLists.txt  README.md  build.sh
1.getting_started/1.1_hello_window/: CMakeLists.txt  main.cpp
2.lighting/2.1_colors/: CMakeLists.txt  main.cpp
2.lighting/2.1_colors/shaders/: .gitkeep
Assignment_2:3D_kinetic_sculpture_animation/: CMakeLists.txt  README.md  main.cpp
Assignment_2:3D_kinetic_sculpture_animation/images/: README.md
Assignment_2:3D_kinetic_sculpture_animation/resources/: README.md
Assignment_2:3D_kinetic_sculpture_animation/resources/fs/: kinetic_sculpture.fs
Assignment_2:3D_kinetic_sculpture_animation/resources/parametric_pattern_2.dxf/: license.txt  scene.gltf
Assignment_2:3D_kinetic_sculpture_animation/resources/vs/: kinetic_sculpture.vs
Assignment_2:3D_kinetic_sculpture_animation/video/: README.md
common/: CMakeLists.txt
common/include/: common.hpp
common/src/: common.cpp
